--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-webview": "^11.3.2"
+    "react-native-elements": "^3.3.2",
+    "react-native-fs": "^2.16.6",
+    "react-native-image-picker": "^3.3.2",
+    "react-native-trimmer": "^1.1.1",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
+    "react-native-video-processing": "^2.0.0",
+    "react-native-webview": "^11.3.2",
+    "rnpm": "^1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
