--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,20 @@
 
 buildscript {
     ext {
+        reactNativeFFmpegPackage = "https-lts"
+        reactNativeFFmpegPackage = "min-lts"
+        reactNativeFFmpegPackage = "min-gpl-lts"
+        reactNativeFFmpegPackage = "http-gpl-lts"
+        reactNativeFFmpegPackage = "full-lts"
+        reactNativeFFmpegPackage = "full-gpl-lts"
+        reactNativeFFmpegPackage = "video-lts"
+        reactNativeFFmpegPackage = "audio-lts"
         buildToolsVersion = "29.0.3"
-        minSdkVersion = 21
+        minSdkVersion = 24
         compileSdkVersion = 29
         targetSdkVersion = 29
         ndkVersion = "20.1.5948944"
+        googlePlayServicesAuthVersion = "19.0.0"
     }
     repositories {
         google()
@@ -14,6 +23,7 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.1.0")
+        classpath('com.google.gms:google-services:4.3.4')
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -22,6 +32,8 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        mavenCentral()
+
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
