--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,25 @@ target 'hitokoto2' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
+  pod 'RNGoogleSignin', :path => '../node_modules/react-native-google-signin'
+
+  pod 'Firebase/Analytics'
+
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
+  pod 'RNFBApp', :path => '../node_modules/@react-native-firebase/app'
+
+  pod 'RNAudio', :path => '../node_modules/react-native-audio'
+
+  pod 'ReactNativeAudioToolkit', :path => '../node_modules/@react-native-community/audio-toolkit'
+
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
+
   target 'hitokoto2Tests' do
     inherit! :complete
     # Pods for testing
