--- a/package.json
+++ b/package.json
@@ -10,17 +10,59 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/audio-toolkit": "^2.0.3",
+    "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^11.4.1",
+    "@react-native-firebase/auth": "^11.4.1",
+    "@react-native-firebase/firestore": "^11.4.1",
+    "@react-native-firebase/functions": "^11.4.1",
+    "@react-native-firebase/storage": "^11.4.1",
+    "@react-native-google-signin/google-signin": "^6.0.0",
+    "@react-native-menu/menu": "^0.3.3",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/material-top-tabs": "^5.3.14",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
+    "autoconf": "^1.2.0",
+    "autogen": "0.0.1",
+    "automake": "^0.1.4",
+    "bison": "^1.1.1",
+    "curl": "^0.1.4",
+    "date-fns": "^2.21.1",
+    "gcc": "^1.0.2",
+    "gperf": "^0.1.3",
+    "patch": "0.0.1",
+    "pkg-config": "^1.1.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-draggable-flatlist": "^2.6.1",
     "react-native-elements": "^3.3.2",
+    "react-native-fbsdk-next": "^4.0.0",
+    "react-native-ffmpeg": "^0.5.1",
+    "react-native-firebase": "^5.6.0",
     "react-native-fs": "^2.16.6",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.36.0",
     "react-native-image-picker": "^3.3.2",
+    "react-native-music-control": "^1.3.0",
+    "react-native-orientation": "^3.1.3",
+    "react-native-reanimated": "^2.0.1",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^2.18.1",
+    "react-native-sound-player": "^0.10.8",
+    "react-native-svg": "^12.1.0",
+    "react-native-swift": "^1.2.3",
+    "react-native-tab-view": "^2.16.0",
+    "react-native-tags": "^2.2.0",
+    "react-native-tags-input": "^1.0.10",
+    "react-native-track-player": "^1.2.7",
     "react-native-trimmer": "^1.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
-    "react-native-video-processing": "^2.0.0",
     "react-native-webview": "^11.3.2",
-    "rnpm": "^1.9.0"
+    "rnpm": "^1.9.0",
+    "yasm": "^0.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
@@ -34,5 +76,6 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "isSwift": true
 }
