--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pkg-config": "^1.1.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-document-picker": "^5.0.3",
     "react-native-draggable-flatlist": "^2.6.1",
     "react-native-elements": "^3.3.2",
     "react-native-fbsdk-next": "^4.0.0",
