--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,15 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google-cloud/storage": "^5.8.5",
     "eslint": "^7.25.0",
+    "ffmpeg-static": "^4.4.0",
     "firebase-admin": "^9.7.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "tone": "^14.7.77",
+    "uuid-v4": "^0.1.0"
   },
   "devDependencies": {
     "eslint-config-google": "^0.14.0",
