--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bison": "^1.1.1",
     "curl": "^0.1.4",
     "date-fns": "^2.21.1",
+    "firebase-functions": "^3.14.1",
     "gcc": "^1.0.2",
     "gperf": "^0.1.3",
     "patch": "0.0.1",
@@ -45,7 +46,7 @@
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.0",
-    "react-native-image-picker": "^3.3.2",
+    "react-native-image-picker": "^3.8.1",
     "react-native-music-control": "^1.3.0",
     "react-native-orientation": "^3.1.3",
     "react-native-reanimated": "^2.0.1",
