--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/audio-toolkit": "^2.0.3",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/analytics": "^14.3.0",
     "@react-native-firebase/app": "^11.4.1",
     "@react-native-firebase/auth": "^11.4.1",
     "@react-native-firebase/firestore": "^11.4.1",
@@ -30,7 +31,6 @@
     "bison": "^1.1.1",
     "curl": "^0.1.4",
     "date-fns": "^2.21.1",
-    "firebase-functions": "^3.14.1",
     "gcc": "^1.0.2",
     "gperf": "^0.1.3",
     "patch": "0.0.1",
@@ -42,7 +42,6 @@
     "react-native-elements": "^3.3.2",
     "react-native-fbsdk-next": "^4.0.0",
     "react-native-ffmpeg": "^0.5.1",
-    "react-native-firebase": "^5.6.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.0",
@@ -63,7 +62,6 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
     "react-native-webview": "^11.3.2",
-    "rnpm": "^1.9.0",
     "yasm": "^0.1.2"
   },
   "devDependencies": {
