--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/auth": "^13.1.1",
     "@react-native-firebase/firestore": "^13.1.1",
     "@react-native-firebase/functions": "^13.1.1",
+    "@react-native-firebase/messaging": "^14.3.0",
     "@react-native-firebase/storage": "^13.1.1",
     "@react-native-google-signin/google-signin": "^6.0.0",
     "@react-native-menu/menu": "^0.3.3",
