--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 # Mandatory info for starting the app
-REACT_APP_MORALIS_APPLICATION_ID = 9OQ8vam3aPnSELPuxhKo6DFd3o3M0Drp8HoVYepo
-REACT_APP_MORALIS_SERVER_URL = https://gr3grk3w2v0v.usemoralis.com:2053/server
+REACT_APP_MORALIS_APPLICATION_ID = PDP4ImPSjTjyRufcSgNNVreBmZ5m7Bqw0BKdxMHV
+REACT_APP_MORALIS_SERVER_URL = https://ddb0jtowzik9.usemoralis.com:2053/server
+
+REACT_APP_ALGOLIA_ID="MV5ORYXG2V"
+REACT_APP_ADMIN_API_KEY="0e86f2d9d8f1d36e4b385ac37d4d2808"
 
 # Optional info for connecting your localChain and Moralis Database
 # moralisApiKey = xxxxx
