--- a/functions/package.json
+++ b/functions/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/storage": "^5.8.5",
+    "algoliasearch": "^4.13.0",
     "eslint": "^7.25.0",
     "ffmpeg-static": "^4.4.0",
     "firebase-admin": "^9.12.0",
-    "firebase-functions": "^3.11.0",
+    "firebase-functions": "^3.18.1",
     "fluent-ffmpeg": "^2.1.2",
+    "moralis": "^1.3.5",
     "tone": "^14.7.77",
     "uuid-v4": "^0.1.0"
   },
