--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "postinstall": "node_modules/.bin/rn-nodeify --install crypto,http,https,os,assert,url,stream,events --yarn"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-flow": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
+    "@drizzle/react-plugin": "^1.5.3",
+    "@drizzle/store": "^1.5.3",
     "@eva-design/eva": "^2.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
@@ -51,10 +54,13 @@
     "@ui-kitten/components": "^5.1.1",
     "@walletconnect/react-native-dapp": "1.6.6",
     "@walletconnect/web3-provider": "^1.7.0",
+    "algoliasearch": "^4.13.0",
+    "babel-eslint": "^10.1.0",
     "base-64": "1.0.0",
     "buffer": "6.0.3",
     "date-fns": "^2.28.0",
     "env": "^0.0.2",
+    "eslint-scope": "^7.1.1",
     "event-emitter": "^0.3.5",
     "events": "^1.1.1",
     "https-browserify": "~0.0.0",
@@ -71,8 +77,9 @@
     "react": "~17.0.2",
     "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
-    "react-moralis": "0.2.7",
+    "react-moralis": "^0.2.7",
     "react-native": "~0.63.3",
+    "react-native-audio-record": "^0.2.2",
     "react-native-crypto": "^2.1.0",
     "react-native-document-picker": "^5.0.3",
     "react-native-dotenv": "2.4.3",
@@ -81,6 +88,7 @@
     "react-native-emoji-selector": "^0.2.0",
     "react-native-fbsdk-next": "^4.0.0",
     "react-native-ffmpeg": "^0.5.1",
+    "react-native-form-validator": "^0.5.1",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "1.5.0",
@@ -91,6 +99,7 @@
     "react-native-orientation": "^3.1.3",
     "react-native-os": "^1.0.1",
     "react-native-paper": "^4.9.2",
+    "react-native-permissions": "^3.2.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
@@ -119,6 +128,7 @@
     "@babel/core": "~7.9.0",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@react-native-community/eslint-config": "^3.0.1",
     "@types/jest": "^26.0.20",
     "@types/node": "14.14.22",
     "@types/react": "~16.9.35",
@@ -133,9 +143,10 @@
     "dotenv": "8.2.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
-    "eslint": "^7.8.0",
+    "eslint": "^8.13.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-flowtype": "8.0.3",
     "eslint-plugin-functional": "^3.0.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-react": "7.22.0",
@@ -147,7 +158,7 @@
     "jest": "26.6.3",
     "lint-staged": "10.5.3",
     "platform-detect": "3.0.1",
-    "prettier": "2.2.1",
+    "prettier": "^2.6.2",
     "react-native-codegen": "^0.0.12",
     "react-test-renderer": "17.0.1",
     "ts-node": "^10.4.0",
@@ -168,7 +179,7 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx}": "eslint --fix --ext '.ts,.tsx,.js,.jsx' -c .eslintrc.json"
+    "*.{ts,tsx,js,jsx}": "eslint --fix --ext '.ts,.tsx,.js,.jsx' -c .eslintrc.js"
   },
   "react-native": {
     "crypto": "react-native-crypto",
@@ -193,5 +204,11 @@
     "_stream_duplex": "readable-stream/duplex",
     "_stream_passthrough": "readable-stream/passthrough",
     "stream": "stream-browserify"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   }
 }
